--- a/hvrskyworthvr/src/main/res/values/strings.xml
+++ b/hvrskyworthvr/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="login_account_not_null">账号不能为空</string>
     <string name="login_account_must_equals">两次输入账号必须一样</string>
     <string name="main_navigation_publish">全景出版</string>
-    <string name="main_navigation_video">全景视频</string>
+    <string name="main_navigation_video">全景演出</string>
     <string name="main_navigation_about">关于</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
