--- a/hvrskyworthvr/src/main/res/values/strings.xml
+++ b/hvrskyworthvr/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">农家360</string>
+    <string name="app_name">大眼360</string>
     <string name="splash_title">欢迎体验农家360</string>
     <string name="splash_copyright">Copyright © 2021 ChinaFocus. All rights reserved.</string>
 
