--- a/hvrskyworthvr/src/main/res/values/strings.xml
+++ b/hvrskyworthvr/src/main/res/values/strings.xml
@@ -49,6 +49,8 @@
     <string name="media_video_vr_sync">正在同步展示VR眼镜中的视频</string>
     <string name="media_video_vr_link_des">戴上 VR 眼镜，立即开始同步观看</string>
     <string name="vr_mode_linking">正在等待 VR 眼镜播放视频</string>
+    <string name="mine_about">关于</string>
+    <string name="mine_about_copyright_intro">中图云创 版权所有\nCopyright © 2021 ChinaFocus. All rights reserved.</string>
 
 
 </resources>
