--- a/hvrskyworthvr/src/main/res/values/strings.xml
+++ b/hvrskyworthvr/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="main_navigation_publish">全景出版</string>
     <string name="main_navigation_video">全景视频</string>
     <string name="main_navigation_about">关于</string>
-    <!-- TODO: Remove or change this placeholder text -->
+    <!-- Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string name="setting_title">产品配置</string>
