--- a/hvrskyworthvr/src/main/res/values/strings.xml
+++ b/hvrskyworthvr/src/main/res/values/strings.xml
@@ -51,6 +51,9 @@
     <string name="vr_mode_linking">正在等待 VR 眼镜播放视频</string>
     <string name="mine_about">关于</string>
     <string name="mine_about_copyright_intro">中图云创 版权所有\nCopyright © 2021 ChinaFocus. All rights reserved.</string>
+    <string name="bluetooth_status_lost">蓝牙断开，已进入脱机模式\n如想恢复连接，请联系工作人员</string>
+    <string name="bluetooth_status_connected">蓝牙恢复\n已重新和VR建立连接</string>
+    <string name="bluetooth_status_know">我知道了</string>
 
 
 </resources>
