--- a/huaweimdm/src/main/res/values/strings.xml
+++ b/huaweimdm/src/main/res/values/strings.xml
@@ -42,6 +42,7 @@
     <string name="silent_install">设置静默安装</string>
     <string name="enter_splash">进入大眼360</string>
     <string name="all_done">完成设置</string>
+    <string name="all_done_reboot">完成所有设置并重启生效</string>
 
     <string name="disable_uninstall">禁止卸载</string>
     <string name="enable_uninstall">启用卸载</string>
