--- a/hvrskyworthvr/src/main/res/values/strings.xml
+++ b/hvrskyworthvr/src/main/res/values/strings.xml
@@ -59,5 +59,11 @@
     <string name="setting_device_account_id">客户ID</string>
     <string name="setting_device_version_code">版本号</string>
 
+    <string name="check_version_title">发现新版本！</string>
+    <string name="check_version_cancel">以后再说</string>
+    <string name="check_version_confirm">立即更新</string>
+    <string name="check_version_retry">重新下载</string>
+    <string name="check_version_download_des">正在下载升级包，请勿关闭设备…</string>
+    <string name="check_version_download_error">下载失败\n请检查您的网络后再试</string>
 
 </resources>
