--- a/hvrskyworthvr/src/main/res/values/strings.xml
+++ b/hvrskyworthvr/src/main/res/values/strings.xml
@@ -73,4 +73,10 @@
     <string name="check_version_latest">已经是最新版</string>
     <string name="check_network_error">网络错误，请检查网络设置</string>
 
+    <string name="video_update_button">视频缓存</string>
+    <string name="video_update_text_open">开启后，新增、变更的视频将下载并存\n储于本地，确认开启？</string>
+    <string name="video_update_text_close">关闭后，新增、变更的视频将通过网络\n播放，确认关闭？</string>
+    <string name="video_update_button_close">确定关闭</string>
+    <string name="video_update_button_open">确定开启</string>
+
 </resources>
