1.修复了在主页面点击播放视频后，瞬间滑动图片，从而导致item显示错误的bug。2.修复了在App高版本下载的时候，点击暂停，然后再断网，此时点击恢复后显示的bug。3.修复了检查新版本tag显示bug。4.修复了多次点击toast显示错误

--- a/hvrskyworthvr/src/main/res/values/strings.xml
+++ b/hvrskyworthvr/src/main/res/values/strings.xml
@@ -78,5 +78,9 @@
     <string name="video_update_text_close">关闭后，新增、变更的视频将通过网络\n播放，确认关闭？</string>
     <string name="video_update_button_close">确定关闭</string>
     <string name="video_update_button_open">确定开启</string>
+    <string name="video_update_init_text">更新列表</string>
+    <string name="video_update_running_text">正在更新</string>
+    <string name="video_update_error_text">更新失败，重试</string>
+    <string name="video_update_Latest_text">列表已是最新</string>
 
 </resources>
