--- a/hvrskyworthvr/src/main/res/values/strings.xml
+++ b/hvrskyworthvr/src/main/res/values/strings.xml
@@ -84,4 +84,12 @@
     <string name="video_update_download_error_text">获取列表失败，重试</string>
     <string name="video_update_Latest_text">列表已是最新</string>
 
+    <string name="video_update_text">视频资源更新</string>
+    <string name="video_update_get_text">获取最新列表</string>
+    <string name="video_update_get_text2">离线下载</string>
+    <string name="video_update_close_text">离线下载功能处于关闭状态\n视频将使用流量播放</string>
+    <string name="video_update_get_text3">未缓存至本地的视频将使用流量播放</string>
+    <string name="video_update_get_text4">当前网络不可用，点击重试</string>
+    <string name="video_update_get_text5">当前已是最新</string>
+
 </resources>
