--- a/hvrskyworthvr/src/main/res/values/strings.xml
+++ b/hvrskyworthvr/src/main/res/values/strings.xml
@@ -93,4 +93,6 @@
     <string name="video_update_get_text5">当前已是最新</string>
     <string name="video_update_get_text6">当前视频资源更新，请前往离线下载页\n面下载最新视频</string>
 
+    <string name="video_list_no_data">暂无数据</string>
+
 </resources>
