--- a/hvrskyworthvr/src/main/res/values/strings.xml
+++ b/hvrskyworthvr/src/main/res/values/strings.xml
@@ -46,6 +46,7 @@
     <string name="media_video_adjust">回正</string>
     <string name="media_video_vr">VR</string>
     <string name="media_video_intro_big">简介</string>
+    <string name="media_video_setting">设置</string>
     <string name="media_video_vr_sync">正在同步展示 VR 眼镜中的视频，已禁用返回及拖动进度功能</string>
     <string name="media_video_vr_link_des">戴上 VR 眼镜，立即开始同步观看</string>
     <string name="vr_mode_linking">正在等待 VR 眼镜播放视频</string>
@@ -103,5 +104,9 @@
     <string name="video_list_no_data">暂无数据</string>
     <string name="video_update_time_text">时间设置</string>
     <string name="video_update_time_text2">至</string>
+
+    <string name="media_setting_name">设置</string>
+    <string name="media_setting_volume">音量</string>
+    <string name="media_setting_brightness">亮度</string>
 
 </resources>
